--- a/manifest.json
+++ b/manifest.json
@@ -1,16 +1,18 @@
 {
-    "manifest_version": 2,
-    "name": "YouTube Focus",
-    "description": "Block all videos besides music streams",
-    "version": "1.0.0",
-    "icons": {"128": "icon_128.png"},
-    "permissions": ["tabs", "http://*/*", "https://*/*", "file:///*/*"],
-    "browser_action": {
-        "default_icon": "icon.png"
-    },
-    "content_scripts": [{
-        "js": ["filter.js"],
-        "matches": ["https://*.youtube.com/*"], 
-        "all_frames": true
-    }]
+  "manifest_version": 2,
+  "name": "YouTube Focus",
+  "description": "Block all videos besides music streams",
+  "version": "1.0.0",
+  "icons": { "128": "icon_128.png" },
+  "permissions": ["https://*.youtube.com/*"],
+  "browser_action": {
+    "default_icon": "icon.png"
+  },
+  "content_scripts": [
+    {
+      "js": ["filter.js"],
+      "matches": ["https://*.youtube.com/*"],
+      "all_frames": true
+    }
+  ]
 }
