--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,9 @@
   "name": "YouTube Focus",
   "description": "Block all videos besides music streams",
   "version": "1.0.0",
-  "icons": { "128": "icon_128.png" },
+  "icons": {
+    "128": "icon_128.png"
+  },
   "permissions": ["https://*.youtube.com/*"],
   "browser_action": {
     "default_icon": "icon.png"
