--- a/manifest.json
+++ b/manifest.json
@@ -4,6 +4,9 @@
   "description": "Block all videos besides music streams",
   "version": "1.0.0",
   "icons": {
+    "16": "icon_16.png",
+    "32": "icon_32.png",
+    "48": "icon_48.png",
     "128": "icon_128.png"
   },
   "permissions": ["https://*.youtube.com/*"],
